# paddle-client

./: .editorconfig  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  tox.ini
docs/: api_reference.rst  conf.py  getting_started.rst  index.rst  requirements.txt
paddle/: __init__.py  _coupons.py  _licenses.py  _modifiers.py  _one_off_charges.py  _order_information.py  _pay_links.py  _payments.py  _plans.py  _prices.py  _product_payments.py  _products.py  _subscription_payments.py  _subscription_users.py  _transactions.py  _user_history.py  _webhooks.py  constants.py  paddle.py  types.py  validators.py
tests/: create_subscription.html  fixtures.py  test_coupons.py  test_licenses.py  test_modifiers.py  test_one_off_charges.py  test_order_information.py  test_paddle.py  test_pay_links.py  test_payments.py  test_plans.py  test_prices.py  test_product_payments.py  test_products.py  test_subscription_payments.py  test_subscription_users.py  test_transactions.py  test_user_history.py  test_validators.py  test_webhooks.py
tests/data/: fake-application.txt
