[tool.poetry]
name = "paddle-python"
packages = [
    {include = "paddle"}
]
version = "0.1.0"
description = "Python wrapper around the Paddle.com API"
license = "MIT"
authors = ["Matt Pye <pyematt@gmail.com>"]
readme = "README.md"
repository = "https://github.com/pyepye/paddle-python"
homepage = "https://github.com/pyepye/paddle-python"
keywords = ["paddle", "paddle.com", "payments", "billing", "commerce", "finance", "saas"]

[tool.poetry.dependencies]
python = "^3.5"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
mypy = "^0.770"
isort = "^4.3.21"
flake8 = "^3.8.2"
pytest-cov = "^2.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
