[tool.poetry]
name = "paddle-client"
packages = [
    {include = "paddle"}
]
version = "2.0.0"
description = "Python wrapper around the Paddle.com API"
license = "MIT"
authors = ["Matt Pye <pyematt@gmail.com>"]
readme = "README.md"
repository = "https://github.com/paddle-python/paddle-client"
homepage = "https://github.com/paddle-python/paddle-client"
keywords = ["paddle", "paddle.com", "payments", "billing", "commerce", "finance", "saas"]

[tool.poetry.dependencies]
python = "^3.6.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "^0.902"
isort = {extras = ["pyproject"], version = "^5.8.0"}
flake8 = "^3.8.2"
pytest-cov = "^2.9.0"
tox = "^3.15.1"
pytest-mock = "^3.6.1"
sphinx = "^3.5.4"
sphinx-rtd-theme = "^0.5.0"
sphinx-autodoc-typehints = "^1.11.0"

[tool.isort]
line_length = 120
multi_line_output = 5
known_third_party = "pytest"
known_first_party = "paddle"
skip_glob = "__pycache__/*,venv/*,.venv/*,.tox/*,.mypy_cache"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
